--- a/packages/react-vant/package.json
+++ b/packages/react-vant/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-vant",
-  "version": "3.0.0-rc.7",
+  "version": "3.0.0-rc.8",
   "description": "React Mobile UI Components base on Vant UI",
   "keywords": [
     "ui",
@@ -111,6 +111,6 @@
   },
   "publishConfig": {
     "access": "public",
-    "registry": "https://registry.npmjs.org/"
+    "registry": "http://11.11.11.96:4873/"
   }
 }
